<resources>
    <string name="app_name">MyCollege</string>
    <string name="page_image">page_image</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="are_you_a_college">Are you a college?</string>
    <string name="register_with_us">Register with us</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="already_registered">Already registered?\t</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward_button">forward button</string>
    <string name="an_exact_place_for_all_your_college_stuff">An exact place for all your college stuff!</string>
    <string name="welcome_to_mycollege">Welcome to MyCollege</string>
    <string name="skip">Skip</string>
    <string name="doubt_didi">Doubt Didi</string>
    <string name="a_24_7_doubt_forum">A 24/7 doubt forum</string>
    <string name="ask_and_solve_doubts_anytime">Ask and solve doubts anytime</string>
    <string name="attendance_baabu">Attendance Baabu</string>
    <string name="your_daily_attendance_buddy">Your daily attendance buddy</string>
    <string name="fastest_way_to_fill_your_attendance">Fastest way to fill your attendance</string>
    <string name="register">Register</string>
    <string name="about_your_college">About your college...</string>
    <string name="college_registration_no">College Registration No.</string>
    <string name="college_name">College Name</string>
    <string name="university_name">University Name</string>
    <string name="email_college">Email (college)</string>
    <string name="set_password">Set password...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="hey_mate">Hey mate!</string>
    <string name="enrollment_no">Enrollment No.</string>
    <string name="branch">Branch</string>
    <string name="course">Course</string>
    <string name="semester">Semester</string>
    <string name="email_id">Email ID</string>
    <string name="good_morning">Good Morning</string>
    <string name="name">name</string>
    <string name="doubtdidi">DoubtDidi</string>
    <string name="attendancebaabu">AttendanceBaabu</string>
    <string name="notesensai">NoteSensai</string>
</resources>