<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterCollegeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_26ssp" />

        <View
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/green"/>

        <TextView
            android:id="@+id/header1"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/about_your_college"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/collegeRegNum_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/college_registration_no"
            android:inputType="text"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/collegeName_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/college_name"
            android:inputType="text"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/adminName_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="Admin Name"
            android:inputType="text"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/uniName_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/university_name"
            android:inputType="text"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/collegeEmail_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/email_college"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/header2"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/set_password"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/confirmPassword_Txt"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/errorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="***"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_12ssp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/filled_btn2"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/_14ssp" />

            <android.widget.Button
                android:id="@+id/cancelBtn"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:background="@drawable/unfilled_btn2"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>