<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashScreenFragments.Fragment2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topFragmentStatusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="100">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragPageDotsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_weight="95">

                <ImageView
                    android:id="@+id/page1_ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/circle_blank" />

                <ImageView
                    android:id="@+id/page2_ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/page1_ind"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/circle_filled" />

                <ImageView
                    android:id="@+id/page3_ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@id/page2_ind"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/circle_blank" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/skip_txt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topFragmentStatusBar"
            app:layout_constraintEnd_toEndOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/page1_img"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_210sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/scan_qr" />

            <TextView
                android:id="@+id/page1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance_baabu"
                android:textColor="@color/blue"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/page1_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/your_daily_attendance_buddy"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/page1_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fastest_way_to_fill_your_attendance"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/forward_btn"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/white"
            android:contentDescription="@string/forward_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/image_right_arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>